# concordium-ledger-app

./: .gitignore  Makefile  README.md  docker-compose.yml  gdb.sh  ledger_app.toml  z_debug
.clusterfuzzlite/: build.sh
.github/workflows/: cflite_pr.yml  codeql_checks.yml
doc/: error.md  export_private_key.md  ins_get_app_version.md  ins_plt.md
fuzzing/: CMakeLists.txt  README.md  fuzz_tx_parser.c  local_run.sh
fuzzing/extra/: TxParser.cmake
fuzzing/include/: globals.h  ledger_assert.h  util.h
fuzzing/src/: standalone_export_pk_new_path_fuzzer.c  standalone_plt_fuzzer.c  util_stub.c
lib/tinycbor/: .tag
lib/tinycbor-ledger/: cborparser.c
lib/tinycbor/scripts/: maketag.pl
lib/tinycbor/src/: cborpretty.c  cborpretty_stdio.c  cbortojson.c  cborvalidation.c
lib/tinycbor/tests/parser/: tst_parser.cpp
src/: app_main.c  cborStrParsing.c  cborStrParsing.h  constants.h  deployModule.c  exportPrivateKey.c  exportPrivateKey.h  exportPrivateKeyLegacyPath.c  exportPrivateKeyNewPath.c  get_app_version.c  get_app_version.h  globals.h  initContract.c  signConfigureBaker.c  signConfigureDelegation.c  signCredentialDeployment.c  signEncryptedAmountTransfer.h  signPLT.c  signPLT.h  signPublicInformationForIp.c  signRegisterData.c  signTransfer.c  signTransfer.h  signTransferToPublic.c  signTransferWithSchedule.c  sw.h  types.h  updateContract.c  verifyAddress.c
src/apdu/: dispatcher.c
src/common/: base58check.c  handler.c  handler.h  numberHelpers.c  numberHelpers.h  responseCodes.h  sign.c  stringUtils.c  stringUtils.h  util.c  util.h
src/common/ui/: display.h  display_bagl.c  display_nbgl.c  menu_nbgl.c
src/handler/: sign_transfer.h  sign_transfer_with_schedule.c
src/helper/: time.c  time.h
src/transaction/: deserialize.c  deserialize.h  types.h
src/ui/: bagl_display.c  display.h  nbgl_display_transfer_with_schedule.c
tests/: data.txt  requirements.txt  test_app_mainmenu.py  test_appversion_cmd.py  test_configure_baker.py  test_configure_delegation.py  test_credential_deployment.py  test_deploy_module.py  test_export_private_key.py  test_init_contract.py  test_pubkey_cmd.py  test_public_information_for_ip.py  test_register_data.py  test_sign_cmd.py  test_sign_plt_tx.py  test_transfer_to_public.py  test_update_contract.py  usage.md  utils.py
tests/application_client/: boilerplate_command_sender.py
